feat: 各個頁面長出來之後再看要不要調什麼

--- a/pages/cloud-pillow.html
+++ b/pages/cloud-pillow.html
@@ -73,7 +73,9 @@
         </div>
 
         <div class="hero-visual" aria-hidden="true">
-          <div class="image-card"><img src="../assets/images/workshop-03.jpg" alt="" /></div>
+          <div class="image-card">
+            <img src="../assets/images/cloud-pillow/hero.jpg" alt="" />
+          </div>
           <div class="floating-tag">柔軟觸感</div>
           <div class="floating-tag alt">可帶成品</div>
         </div>
