--- a/pages/pet-house.html
+++ b/pages/pet-house.html
@@ -111,8 +111,7 @@
 
         <div class="hero-visual" aria-hidden="true">
           <div class="image-card">
-            <!-- 你之後換成寵物窩主視覺 -->
-            <img src="../assets/images/workshop-01.jpg" alt="" />
+            <img src="../assets/images/pet-house/pet-house.jpg" alt="寵物窩手作作品" />
           </div>
           <div class="floating-tag">可調配色</div>
           <div class="floating-tag alt">可帶成品</div>
