--- a/pages/ocean-diy.html
+++ b/pages/ocean-diy.html
@@ -44,7 +44,7 @@
         </div>
 
         <a href="../index.html#gallery">作品集</a>
-        <a href="../index.html#locations">據點</a>
+        <a href="../index.html#location">地點</a>
         <a href="../index.html#faq">FAQ</a>
         <a class="btn btn-small" href="../index.html#contact">聯絡</a>
       </nav>
@@ -74,7 +74,7 @@
       </div>
 
       <a href="../index.html#gallery">作品集</a>
-      <a href="../index.html#locations">據點</a>
+      <a href="../index.html#location">地點</a>
       <a href="../index.html#faq">FAQ</a>
       <a href="../index.html#contact">聯絡</a>
     </div>
