--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <a href="#gallery">作品集</a>
         <a href="#location">地點</a>
-        <a href="#faq">FAQ</a>
+        <a href="./pages/faq.html">FAQ</a>
         <a class="btn btn-small" href="#contact">聯絡</a>
       </nav>
 
@@ -78,7 +78,7 @@
 
       <a href="#gallery">作品集</a>
       <a href="#location">地點</a>
-      <a href="#faq">FAQ</a>
+      <a href="./pages/faq.html">FAQ</a>
       <a href="#contact">聯絡</a>
     </div>
   </header>
@@ -498,30 +498,6 @@
       </div>
     </section>
 
-    <!-- FAQ -->
-    <section class="section" id="faq">
-      <div class="container">
-        <div class="section-head">
-          <h2>FAQ</h2>
-          <p>你可能會想先問的幾件事。</p>
-        </div>
-
-        <div class="faq">
-          <details>
-            <summary>需要先預約嗎？</summary>
-            <p>是的，採預約制。你可以從「立即預約」連結選擇時段，或私訊我們確認。</p>
-          </details>
-          <details>
-            <summary>完全沒有手作經驗也可以嗎？</summary>
-            <p>可以。課程會一步一步帶你做，重點是放鬆和享受過程。</p>
-          </details>
-          <details>
-            <summary>可以團體或企業包場嗎？</summary>
-            <p>可以。人數、主題、時間都能討論，請到下方聯絡我們。</p>
-          </details>
-        </div>
-      </div>
-    </section>
 
     <!-- Contact -->
     <section class="section soft-bg" id="contact">
