--- a/pages/chubby-bag.html
+++ b/pages/chubby-bag.html
@@ -44,7 +44,7 @@
 
         <a href="../index.html#gallery">作品集</a>
         <a href="../index.html#location">地點</a>
-        <a href="../index.html#faq">FAQ</a>
+        <a href="./faq.html">FAQ</a>
         <a class="btn btn-small" href="../index.html#contact">聯絡</a>
       </nav>
 
@@ -74,7 +74,7 @@
 
       <a href="../index.html#gallery">作品集</a>
       <a href="../index.html#location">地點</a>
-      <a href="../index.html#faq">FAQ</a>
+      <a href="./faq.html">FAQ</a>
       <a href="../index.html#contact">聯絡</a>
     </div>
   </header>
