--- a/pages/cloud-pillow.html
+++ b/pages/cloud-pillow.html
@@ -35,7 +35,7 @@
         </div>
         <a href="../index.html#gallery">作品集</a>
         <a href="../index.html#location">地點</a>
-        <a href="../index.html#faq">FAQ</a>
+        <a href="./faq.html">FAQ</a>
         <a class="btn btn-small" href="../index.html#contact">聯絡</a>
       </nav>
       <button class="nav-toggle" id="navToggle" aria-label="開啟選單" aria-expanded="false"><span></span><span></span><span></span></button>
@@ -46,7 +46,7 @@
       <div class="mobile-subnav" id="mobileCraftMenu" hidden>
         <a href="./pet-house.html">寵物窩</a><a href="./chubby-bag.html">胖寶包</a><a href="./cloud-pillow.html">雲朵抱枕</a><a href="./fluid-art.html">流體藝術</a><a href="./alcohol-ink.html">酒精墨水</a><a href="./crystal-art.html">水晶掛畫</a><a href="./gold-foil.html">金箔畫</a><a href="./drum.html">空靈鼓</a><a href="./dot-mandala.html">點點曼陀羅</a><a href="./ocean-diy.html">海洋手作</a>
       </div>
-      <a href="../index.html#gallery">作品集</a><a href="../index.html#location">地點</a><a href="../index.html#faq">FAQ</a><a href="../index.html#contact">聯絡</a>
+      <a href="../index.html#gallery">作品集</a><a href="../index.html#location">地點</a><a href="./faq.html">FAQ</a><a href="../index.html#contact">聯絡</a>
     </div>
   </header>
 
