--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <a href="#gallery">作品集</a>
         <a href="#location">地點</a>
         <a href="./pages/faq.html">FAQ</a>
-        <a class="btn btn-small" href="#contact">聯絡</a>
+        <button class="btn btn-small js-open-contact" type="button">聯絡</button>
       </nav>
 
       <!-- Mobile hamburger -->
@@ -79,7 +79,7 @@
       <a href="#gallery">作品集</a>
       <a href="#location">地點</a>
       <a href="./pages/faq.html">FAQ</a>
-      <a href="#contact">聯絡</a>
+      <button class="mobile-link js-open-contact" type="button">聯絡</button>
     </div>
   </header>
 
@@ -497,40 +497,6 @@
         </div>
       </div>
     </section>
-
-
-    <!-- Contact -->
-    <section class="section soft-bg" id="contact">
-      <div class="container">
-        <div class="section-head">
-          <h2>聯絡我們</h2>
-          <p>想預約、合作、訂製，都可以從這裡找到我們。</p>
-        </div>
-
-        <div class="grid contact-grid">
-          <div class="card">
-            <h3>快速入口</h3>
-            <div class="stack">
-              <a class="btn" href="https://portaly.cc/mimime.169" target="_blank" rel="noreferrer">預約 / 報名</a>
-              <a class="btn btn-ghost" href="https://www.instagram.com/mimime.169/" target="_blank" rel="noreferrer">Instagram</a>
-              <a class="btn btn-ghost" href="#" aria-disabled="true">LINE（之後換成你的連結）</a>
-            </div>
-            <p class="muted small">把所有對外連結集中在這裡，客人會覺得很安心好找。</p>
-          </div>
-
-          <div class="card">
-            <h3>合作洽詢文案（可複製）</h3>
-            <p class="muted small">
-              你好，我想預約/合作：<br/>
-              1) 想做的項目：<br/>
-              2) 人數：<br/>
-              3) 希望日期/時段：<br/>
-              4) 地點（台中/板橋/到府）：<br/>
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
   </main>
 
   <footer class="site-footer">
@@ -539,7 +505,35 @@
       <a class="link" href="#top">回到上方 ↑</a>
     </div>
   </footer>
-
+  <div class="contact-bubble" id="contactBubble">
+    <button class="bubble-fab" id="bubbleFab" type="button" aria-label="開啟聯絡資訊" aria-expanded="false">
+      💬
+    </button>
+  
+    <div class="bubble-panel" id="bubblePanel" role="dialog" aria-modal="false" aria-label="聯絡資訊" hidden>
+      <div class="bubble-head">
+        <div class="bubble-title">聯絡我</div>
+        <button class="bubble-close" id="bubbleClose" type="button" aria-label="關閉">✕</button>
+      </div>
+  
+      <div class="bubble-body">
+        <p class="bubble-desc">想預約、合作或詢問主題，都可以從這裡找到我。</p>
+  
+        <a class="bubble-link" href="https://www.instagram.com/mimime.169/" target="_blank" rel="noreferrer">
+          <span class="bubble-ico">IG</span>
+          <span>Instagram 私訊</span>
+          <span class="bubble-arrow">↗</span>
+        </a>
+  
+        <!-- 先用 placeholder，之後換成你的 LINE 連結 -->
+        <a class="bubble-link" href="#" target="_blank" rel="noreferrer" aria-disabled="true">
+          <span class="bubble-ico">LINE</span>
+          <span>LINE（準備中）</span>
+          <span class="bubble-arrow">↗</span>
+        </a>
+      </div>
+    </div>
+  </div>
   <!-- 放在 body 最後 OK -->
   <script src="./js/main.js"></script>
 </body>
