--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>買譜 me.169｜手作工作室</title>
+  <title>覓謐 me.169｜手作工作室</title>
   <meta name="description" content="療癒系手作工作室。台中西區｜新北板橋｜預約制。" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +18,7 @@
     <div class="container header-inner">
       <a class="brand" href="./index.html" aria-label="回到首頁">
         <span class="brand-mark">me</span>
-        <span class="brand-name">買譜 me.169</span>
+        <span class="brand-name">覓謐 me.169</span>
       </a>
 
       <!-- Desktop nav -->
@@ -501,8 +501,7 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>© <span id="year"></span> 買譜 me.169 ｜療癒系手作工作室</p>
-      <a class="link" href="#top">回到上方 ↑</a>
+       <p>© <span id="year"></span> 覓謐 me.169 ｜療癒系手作工作室</p>
     </div>
   </footer>
   <div class="contact-bubble" id="contactBubble">
