--- a/pages/chubby-bag.html
+++ b/pages/chubby-bag.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>胖寶包｜買譜 me.169</title>
+  <title>胖寶包｜覓謐 me.169</title>
   <meta name="description" content="胖寶包手作體驗：軟萌厚實、療癒好背。預約制｜台中西區｜新北板橋。" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +18,7 @@
     <div class="container header-inner">
       <a class="brand" href="../index.html" aria-label="回到首頁">
         <span class="brand-mark">me</span>
-        <span class="brand-name">買譜 me.169</span>
+        <span class="brand-name">覓謐 me.169</span>
       </a>
 
       <nav class="nav" aria-label="主選單">
@@ -199,8 +199,7 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>© <span id="year"></span> 買譜 me.169 ｜療癒系手作工作室</p>
-      <a class="link" href="#top">回到上方 ↑</a>
+       <p>© <span id="year"></span> 覓謐 me.169 ｜療癒系手作工作室</p>
     </div>
     </footer>
   <!-- Contact Bubble (右下角訊息泡泡) -->
