--- a/pages/faq.html
+++ b/pages/faq.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>FAQ｜買譜 me.169</title>
-  <meta name="description" content="買譜 me.169 常見問題：預約方式、課程難度、團體包場、改期規則與注意事項。" />
+  <title>FAQ｜覓謐 me.169</title>
+  <meta name="description" content="覓謐 me.169 常見問題：預約方式、課程難度、團體包場、改期規則與注意事項。" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
     <div class="container header-inner">
       <a class="brand" href="../index.html" aria-label="回到首頁">
         <span class="brand-mark">me</span>
-        <span class="brand-name">買譜 me.169</span>
+        <span class="brand-name">覓謐 me.169</span>
       </a>
 
       <nav class="nav" aria-label="主選單">
@@ -180,8 +180,7 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>© <span id="year"></span> 買譜 me.169 ｜療癒系手作工作室</p>
-      <a class="link" href="#top">回到上方 ↑</a>
+       <p>© <span id="year"></span> 覓謐 me.169 ｜療癒系手作工作室</p>
     </div>
     </footer>
   <!-- Contact Bubble (右下角訊息泡泡) -->
