--- a/pages/cloud-pillow.html
+++ b/pages/cloud-pillow.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>雲朵抱枕｜買譜 me.169</title>
+  <title>雲朵抱枕｜覓謐 me.169</title>
   <meta name="description" content="雲朵抱枕手作體驗：柔軟蓬鬆、超療癒。預約制｜台中西區｜新北板橋。" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +16,7 @@
 <body>
   <header class="site-header" id="top">
     <div class="container header-inner">
-      <a class="brand" href="../index.html" aria-label="回到首頁"><span class="brand-mark">me</span><span class="brand-name">買譜 me.169</span></a>
+      <a class="brand" href="../index.html" aria-label="回到首頁"><span class="brand-mark">me</span><span class="brand-name">覓謐 me.169</span></a>
       <nav class="nav" aria-label="主選單">
         <div class="dropdown" id="craftDropdown">
           <button class="dropbtn" id="craftBtn" type="button" aria-haspopup="true" aria-expanded="false">手作體驗 <span class="chev" aria-hidden="true">▾</span></button>
@@ -121,7 +121,9 @@
   </main>
 
   <footer class="site-footer">
-    <div class="container footer-inner"><p>© <span id="year"></span> 買譜 me.169 ｜療癒系手作工作室</p><a class="link" href="#top">回到上方 ↑</a></div>
+    <div class="container footer-inner">
+       <p>© <span id="year"></span> 覓謐 me.169 ｜療癒系手作工作室</p>
+    </div>
     </footer>
   <!-- Contact Bubble (右下角訊息泡泡) -->
   <div class="contact-bubble" id="contactBubble">
